--- a/_portfolio/css/timeline.css
+++ b/_portfolio/css/timeline.css
@@ -26,12 +26,12 @@ body, html {
 }
 
 @font-face {
-	font-family: 'ico';
-	src:url('../fonts/ico.eot');
-	src:url('../fonts/ico.eot?#iefix') format('embedded-opentype'),
-		url('../fonts/ico.woff') format('woff'),
-		url('../fonts/ico.ttf') format('truetype'),
-		url('../fonts/ico.svg#ico') format('svg');
+	font-family: 'huxico';
+	src:url('../fonts/huxico.eot');
+	src:url('../fonts/huxico.eot?#iefix') format('embedded-opentype'),
+		url('../fonts/huxico.woff') format('woff'),
+		url('../fonts/huxico.ttf') format('truetype'),
+		url('../fonts/huxico.svg#huxico') format('svg');
 	font-weight: normal;
 	font-style: normal;
 } /* Made with http://icomoon.io/ */
@@ -96,7 +96,7 @@ body, html {
 .cbp_tmtimeline > li .cbp_tmicon {
 	width: 40px;
 	height: 40px;
-	font-family: 'ico';
+	font-family: 'huxico';
 	speak: none;
 	font-style: normal;
 	font-weight: normal;
@@ -118,27 +118,27 @@ body, html {
 
 .cbp_tmicon-phone:before {
 	content: "\e004";
-	font-family: 'ico';
+	font-family: 'huxico';
 }
 
 .cbp_tmicon-screen:before {
 	content: "\e005";
-	font-family: 'ico';
+	font-family: 'huxico';
 }
 
 .cbp_tmicon-html:before {
 	content: "\e001";
-	font-family: 'ico';
+	font-family: 'huxico';
 }
 
 .cbp_tmicon-video:before {
 	content: "\e002";
-	font-family: 'ico';
+	font-family: 'huxico';
 }
 
 .cbp_tmicon-font:before {
 	content: "\e003";
-	font-family: 'ico';
+	font-family: 'huxico';
 }
 
 /** Venders Logo **/
@@ -178,7 +178,7 @@ body, html {
 	background-size: 22px;
 }
 
-/*******  Branch *****/
+/******* Hux Branch *****/
 html{
 	font-size: 90%;
 }
@@ -216,12 +216,12 @@ header img{
 	width: 190px;
 }
 
-.cbp_tmlabel ._ul{
+.cbp_tmlabel .hux_ul{
 	border:none;
 	padding:0;
 	margin:0;
 }
-.cbp_tmlabel ._ul li{
+.cbp_tmlabel .hux_ul li{
 	padding:0;
 	margin: 0;
 	list-style: none;
