--- a/less/hux-blog.less
+++ b/less/hux-blog.less
@@ -8,7 +8,7 @@
 body {
 	.sans-serif;
 	font-size: 16px;
-	//modify to 16px (Mobile First), and increase to 20px while 768+ width
+	// Hux mpdify to 16px (Mobile First), and increase to 20px while 768+ width
 	color: @gray-dark;
 	//-webkit-user-select:text; //对于 Blog 还是先不开启这句。
 	overflow-x : hidden;
@@ -103,7 +103,7 @@ hr.small {
 	border-width: 4px;
 	border-color: white;
 }
-// add by 
+// add by Hux
 pre,.table-responsive{
 	// sometimes you should use vendor-feature.
 	-webkit-overflow-scrolling: touch;
@@ -180,7 +180,7 @@ pre code{
 			margin-top: 20px;
 		}
 	}
-	// V1.6  display title by default.
+	// V1.6 Hux display title by default.
 	.pager li{
 		width: 48%;
 		&.next{ float: right};
@@ -219,9 +219,9 @@ pre code{
 	}
 	/**
 	 * Animation
-	 * Blog-Navbar using genuine Material Design Animation
+	 * HuxBlog-Navbar using genuine Material Design Animation
 	 */
-	#blog_navbar{ 	
+	#huxblog_navbar{ 	
 		/**
 		 * Sharable code and 'out' function
 		 */
@@ -400,7 +400,7 @@ pre code{
 	background-attachment: scroll;
 	.background-cover;
 	// NOTE: Background images are set within the HTML using inline CSS!
-	margin-bottom: 0px;  /* 0 on mobile, modify by  */
+	margin-bottom: 0px;  /* 0 on mobile, modify by Hux */
 	@media only screen and (min-width: 768px) {
 		margin-bottom: 20px;  /* response on desktop */
 	}
@@ -539,7 +539,7 @@ pre code{
 	}
 }
 
-//  add home-page post-content-preview
+// Hux add home-page post-content-preview
 .post-content-preview{
     font-size: 13px;
     font-style: italic;
@@ -755,7 +755,7 @@ img::-moz-selection {
 }
 
 
-/*  add tags support */
+/* Hux add tags support */
 .tags{
 	margin-bottom: -5px;
 	a,.tag{
@@ -882,7 +882,7 @@ img::-moz-selection {
 
 /* Tags support End*/
 
-/*  make all img responsible in post-container */
+/* Hux make all img responsible in post-container */
 .post-container img{
 	display: block;
 	max-width: 100%;
@@ -891,7 +891,7 @@ img::-moz-selection {
 }
 
 
-/*  Optimize UserExperience */
+/* Hux Optimize UserExperience */
 .navbar-default .navbar-toggle {
 	&:focus, &:hover{
 		background-color: inherit;
@@ -901,7 +901,7 @@ img::-moz-selection {
   	}
 }
 
-/*  customize Style for navBar button */
+/* Hux customize Style for navBar button */
 
 .navbar-default .navbar-toggle{
 	border-color: transparent;
@@ -922,7 +922,7 @@ img::-moz-selection {
 }
 
 
-/*  customize Style for Duoshuo */
+/* Hux customize Style for Duoshuo */
 .comment{
 	margin-top: 20px;
 	#ds-thread {
@@ -973,7 +973,7 @@ img::-moz-selection {
 }
 
 
-//  fullscreen mode in 404.html
+// Hux fullscreen mode in 404.html
 
 .page-fullscreen .intro-header{
 	position: fixed;
