--- a/less/hux-blog.less
+++ b/less/hux-blog.less
@@ -180,7 +180,7 @@ pre code{
 			margin-top: 20px;
 		}
 	}
-	// V1.6 Hux display title by default.
+	// V1.6 display title by default.
 	.pager li{
 		width: 48%;
 		&.next{ float: right};
